GNOME Bugzilla – Bug 697290
[MM 0.8] crashes if modem crashes during initialization
Last modified: 2013-04-05 06:59:56 UTC
restart_initialize_idle() from mm-iface-modem.c is an idle source that is not removed when the modem is disposed. ModemManager[13596]: <debug> [1365097946.945741] [mm-at-serial-port.c:408] debug_log(): (ttyUSB3): --> 'AT+CPINC?<CR>' ModemManager[13596]: <debug> [1365097946.957585] [mm-at-serial-port.c:408] debug_log(): (ttyUSB3): <-- '<CR><LF>ERROR<CR><LF>' ModemManager[13596]: <debug> [1365097946.957845] [mm-serial-parsers.c:347] mm_serial_parser_v1_parse(): Got failure code 100: Unknown error ModemManager[13596]: <warn> [1365097946.958010] [mm-iface-modem.c:2527] load_unlock_retries_ready(): Couldn't load unlock retries: 'Unknown error' ModemManager[13596]: <debug> [1365097946.958212] [mm-iface-modem.c:2683] update_lock_info_context_step(): SIM is ready, running after SIM unlock step... ModemManager[13596]: <debug> [1365097946.958337] [mm-serial-port.c:1003] mm_serial_port_close(): (ttyUSB3) device open count is 0 (close) ModemManager[13596]: <debug> [1365097946.958412] [mm-serial-port.c:1019] mm_serial_port_close(): (ttyUSB3) closing serial port... ModemManager[13596]: <debug> [1365097946.971407] [mm-serial-port.c:1050] mm_serial_port_close(): (ttyUSB3) serial port closed [Thread 0xb74ffb40 (LWP 13600) exited] ModemManager[13596]: <info> [1365097954.213901] [mm-manager.c:349] device_removed(): (tty/ttyUSB3): released by modem /sys/devices/pci0000:00/0000:00:1d.2/usb4/4-1 ModemManager[13596]: <info> [1365097954.215196] [mm-manager.c:349] device_removed(): (tty/ttyUSB5): released by modem /sys/devices/pci0000:00/0000:00:1d.2/usb4/4-1 ModemManager[13596]: <info> [1365097954.218430] [mm-manager.c:349] device_removed(): (tty/ttyUSB4): released by modem /sys/devices/pci0000:00/0000:00:1d.2/usb4/4-1 ModemManager[13596]: <debug> [1365097954.218542] [mm-manager.c:354] device_removed(): Removing empty device '/sys/devices/pci0000:00/0000:00:1d.2/usb4/4-1' ModemManager[13596]: <debug> [1365097954.219116] [mm-device.c:361] unexport_modem(): Unexported modem '/sys/devices/pci0000:00/0000:00:1d.2/usb4/4-1' from path '/org/freedesktop/ModemManager1/Modem/1' ModemManager[13596]: <debug> [1365097954.219397] [mm-serial-port.c:1118] mm_serial_port_close_force(): (ttyUSB3) forced to close port ModemManager[13596]: <debug> [1365097954.219462] [mm-serial-port.c:1118] mm_serial_port_close_force(): (ttyUSB5) forced to close port ModemManager[13596]: <debug> [1365097955.373228] [mm-base-modem.c:1285] finalize(): Modem (Sierra) '/sys/devices/pci0000:00/0000:00:1d.2/usb4/4-1' completely disposed (ModemManager:13596): GLib-GObject-WARNING **: invalid unclassed pointer in cast to `MMBaseModem' Program received signal SIGSEGV, Segmentation fault. 0x08077a69 in mm_base_modem_initialize (self=0x816b000, callback=callback@entry=0x80819c0 <reinitialize_ready>, user_data=user_data@entry=0x0) at mm-base-modem.c:407 407 g_assert (MM_BASE_MODEM_GET_CLASS (self)->initialize != NULL); Missing separate debuginfos, use: debuginfo-install ModemManager-0.6.0.0-3.fc17.i686 dbus-libs-1.4.10-7.fc17.i686 glib2-2.32.4-2.fc17.i686 glibc-2.15-58.fc17.i686 gvfs-1.12.3-1.fc17.i686 libbluray-0.2.3-1.fc17.i686 libffi-3.0.10-2.fc17.i686 libgudev1-182-3.fc17.i686 libselinux-2.1.10-3.fc17.i686 libudev-182-3.fc17.i686 libxml2-2.7.8-9.fc17.i686 zlib-1.2.5-7.fc17.i686 (gdb) t a a bt
+ Trace 231727
Thread 1 (Thread 0xb7e99740 (LWP 13596))
Fixed in git master, commit 1cb5831af33237ca8f343410982f44cf8fd2903c.