iface-modem: ensure we cancel the re-initialization idle if the modem goes away

https://bugzilla.gnome.org/show_bug.cgi?id=697290